[package]
name = "geo-normalized"
description = "A trait for producing a normalized Polygon/Multipolygon according to OCG winding rules"
version = "0.1.0"
authors = ["Bronson Brown-deVost <bronsonbdevost@aim.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bronsonbdevost/rust-geo-normalized"
repository = "https://gitlab.com/bronsonbdevost/rust-geo-normalized"
keywords = ["geo", "OCG", "Polygon", "Multipolygon", "Geometry"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.12.2"
num-traits = "0.2.11"
