[package]
name = "geo-normalized2"
description = "A trait for producing a normalized Polygon/Multipolygon according to OCG winding rules"
version = "0.2.1"
authors = ["angcyo@126.com", "Bronson Brown-deVost <bronsonbdevost@aim.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RustStudioIst/rust-geo-normalized"
repository = "https://github.com/RustStudioIst/rust-geo-normalized"
keywords = ["geo", "OCG", "Polygon", "Multipolygon", "Geometry"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/crates/geo
geo = "0.30.0"
# Numeric traits for generic mathematics
# https://crates.io/crates/num-traits
num-traits = "0.2.19"
